Arreglo de fechas e Index Mail.

--- a/EduClass.Web/Views/Mail/Index.cshtml
+++ b/EduClass.Web/Views/Mail/Index.cshtml
@@ -26,7 +26,7 @@
                     </ul>
                 </div>
                 
-                    <a href="Index" class="tooltips" data-toggle="tooltip" data-placement="bottom" title="Recargar"><i class="fa fa-refresh"></i></a>
+                    <a href="@Url.Action("Index", "Mail", new { type =  ViewBag.Type })" class="tooltips" data-toggle="tooltip" data-placement="bottom" title="Recargar"><i class="fa fa-refresh"></i></a>
                     
                 
 
