--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -4,7 +4,7 @@
     <h5 class="sidebar-title">Menú Principal</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
         <li><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
-        <li><a href="@Url.Action("Index", "Mail", new { type = "Enviados" })"><i class="fa fa-inbox"></i> <span>Mensajes</span></a></li>
+        <li><a href="@Url.Action("Index", "Mail", new { type = "Recibidos" })"><i class="fa fa-inbox"></i> <span>Mensajes</span></a></li>
         <li><a href="@Url.Action("Index", "Groups")"><i class="fa fa-users"></i> <span>Grupos</span></a></li>
         @if (UserSession.GetCurrentUser() is Teacher)
         {
