--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                         </li>
                         <li class="list-group-item">
                             <label class="pull-left">Cumpleaños</label>
-                            <span class="pull-right">@cumple.ToShortDateString()</span>
+                            <span class="pull-right">@cumple.ToString("dd/MM/yyyy")</span>
                         </li>
                         <li class="list-group-item">
                             <label class="pull-left">Cédula</label>
