--- a/EduClass.Web/Views/Users/_ActivationAccount.cshtml
+++ b/EduClass.Web/Views/Users/_ActivationAccount.cshtml
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <!--<link rel="shortcut icon" href="../images/favicon.png" type="image/png">-->
 
-    <title>Quirk Responsive Admin Templates</title>
+    <title>Creación Exitosa | Edu.Class</title>
 
     <link rel="stylesheet" href="css/lib_fontawesome_css_font-awesome.css">
     <link href="@Url.Content("~/Content/template/css_quirk.css")" rel="stylesheet" />
