--- a/EduClass.Web/Views/Groups/Edit.cshtml
+++ b/EduClass.Web/Views/Groups/Edit.cshtml
@@ -79,7 +79,7 @@
                                 </!--select>-->
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <input type="text" id="select6" name="select6" class="form-control" data-placeholder="Ingrese los mails" />
+                                        <input type="text" id="select6" name="select6" class="form-control" data-placeholder="Ingrese los mails" required />
                                     </div>
                                 </div>
 
