Pasar la palabra estudiante a alumno

--- a/EduClass.Web/Views/Groups/GetContacts.cshtml
+++ b/EduClass.Web/Views/Groups/GetContacts.cshtml
@@ -75,7 +75,7 @@
                                             
                                         </a>
                                         <h4 class="panel-profile-name">@p.FirstName</h4>
-                                        <p class="media-usermeta"><i class="glyphicon glyphicon-briefcase"></i> Estudiante</p>
+                                        <p class="media-usermeta"><i class="glyphicon glyphicon-briefcase"></i> Alumno</p>
                                     </div>
                                     @if (UserSession.GetCurrentUser() is Teacher)
                                     {
