--- a/EduClass.Web/Views/Tests/ViewStudentsTest.cshtml
+++ b/EduClass.Web/Views/Tests/ViewStudentsTest.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IList<EduClass.Web.Infrastructure.ViewModels.ViewStudentsTestViewModel>
 
 @{
-    ViewBag.Title = "Ver test de los estudiantes";
+    ViewBag.Title = "Ver test de los alumnos";
     var test = (EduClass.Entities.Test)ViewBag.Test;
 }
 
