--- a/EduClass.Web/Views/Users/Register.cshtml
+++ b/EduClass.Web/Views/Users/Register.cshtml
@@ -87,7 +87,7 @@
                                 <input id="teacher" type="radio" name="PersonType" value="teacher" class="input_hidden required" />
                                 <label class="drinkcard-cc btn btn-primary" for="teacher">Profesor</label>
                                 <input id="student" type="radio" name="PersonType" value="student" class="input_hidden required"/>
-                                <label class="drinkcard-cc btn btn-primary" for="student">Estudiante</label>
+                                <label class="drinkcard-cc btn btn-primary" for="student">Alumno</label>
                             </div>
                         </section>
                         <h3>Usuario</h3>
@@ -146,7 +146,7 @@
                 <p>Edu.Class permite manejo de Eventos creados por el profesor, para planificar una fecha de entrega, un Examen o una notificación que le interese a sus alumnos en un día determinado</p>
                 <br>
 
-                <h4 class="reason">2. Estudiante</h4>
+                <h4 class="reason">2. Alumno</h4>
                 <p>Cada Alumno podrá enviar mensajes entre profesores y compañeros de clases. Descargar los archivos del profesor y enterarse de todas sus novedades del grupo</p>
 
                 <hr class="invisible">
