--- a/EduClass.Web/Views/Shared/_Layout.cshtml
+++ b/EduClass.Web/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
                         <h4 class="media-heading">@UserSession.GetCurrentUser().FirstName @UserSession.GetCurrentUser().LastName<a data-toggle="collapse" data-target="#loguserinfo" class="pull-right"><i class="fa fa-angle-down"></i></a>  </h4>
                         @if (@UserSession.GetCurrentUser() is Student)
                         {
-                            <span>Estudiante</span>
+                            <span>Alumno</span>
                         }
                         else if (@UserSession.GetCurrentUser() is Teacher)
                         {
