Arreglos web api y Edit user en Web

--- a/EduClass.Web/Views/Users/Edit.cshtml
+++ b/EduClass.Web/Views/Users/Edit.cshtml
@@ -81,7 +81,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Guardar" class="btn btn-primary pull-right" />
-                        <a href="@Url.Action("Index")" class="btn btn-default-active pull-right mr10">Volver</a>
+                        <a href="@Url.Action("Me")" class="btn btn-default-active pull-right mr10">Volver</a>
                     </div>
                 </div>
             </div>
