--- a/EduClass.Web/App_Code/HelperView.cshtml
+++ b/EduClass.Web/App_Code/HelperView.cshtml
@@ -55,6 +55,20 @@ else
     <span>@value.ToString("dd/MM/yyyy HH:mm")</span>
 }
 
+@helper PrintQtyQuestions(EduClass.Entities.Test test)
+{
+    var question = 0;
+
+    foreach (var i in test.Questions)
+    {
+        if (i.Enabled)
+        {
+            question++;
+        }
+    }
+    <span>@question</span>
+}
+
 
 
 
