--- a/EduClass.Web/Views/Events/Index.cshtml
+++ b/EduClass.Web/Views/Events/Index.cshtml
@@ -118,7 +118,7 @@
                                 <button type="submit" class="btn btn-primary">Guardar cambios</button>
                             }
 
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                            <button id="btnCloseModal" type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                         </div>
                     }
                 </div><!-- modal-content -->
@@ -144,7 +144,9 @@
         
 
         $(document).ready(function () {
-
+            $('#btnCloseModal').click(function(){
+                clearEvent()
+            });
 
             $('#btnDisable').click(function(){
                 $('#formDisable').submit();
@@ -175,7 +177,7 @@
                         $('#evDescription').val(calEvent.description);
                         $('#evStart').val(calEvent.start.format('DD/MM/YYYY HH:mm:00'));
                         $('#evEnd').val(calEvent.end.format('DD/MM/YYYY HH:mm:00'));
-                        $('#evEventType').val(calEvent.eventType);
+                        $('#evddlEventType option').filter(function () { return $(this).html() == calEvent.eventType; }).attr('selected','selected');
 
                         if (!isProfessor) {
 
@@ -211,6 +213,16 @@
                     alert('Error');
                 }
             })
+        }
+
+        function clearEvent()
+        {
+            $('.evId').val(0);
+            $('#evTitle').val('');
+            $('#evDescription').val('');
+            $('#evStart').val(moment().format('DD/MM/YYYY HH:mm:00'));
+            $('#evEnd').val(moment().format('DD/MM/YYYY HH:mm:00'));
+            $('#evddlEventType').val(0)
         }
     </script>
 }
