--- a/EduClass.Web/Views/FilesLibrary/UploadFile.cshtml
+++ b/EduClass.Web/Views/FilesLibrary/UploadFile.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Subir archivo";
 }
-
+<h2>Subir Archivos</h2>
 <div class="jumbotron">
     <form action="~/FilesLibrary/UploadFile" method="post" enctype="multipart/form-data" class="dropzone" id="dropzoneForm">
         <div class="fallback">
