Cambio en el board con tema horas en formato 24hs y cambios app phoegap

--- a/EduClass.Web/Views/Board/Index.cshtml
+++ b/EduClass.Web/Views/Board/Index.cshtml
@@ -137,7 +137,7 @@ else
                         <div class="media-body">
                             <h4 class="media-heading">@item.Person.FirstName @item.Person.LastName</h4>
                             <p class="media-usermeta">
-                                <span class="media-time">@item.CreatedAt.ToString("hh:mm tt")</span>
+                                <span class="media-time">@item.CreatedAt.ToString("HH:mm tt")</span>
                             </p>
                         </div>
                     </div>
